stopped horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -7,11 +7,14 @@
 body {
     font-size: 16px;
     font-family: 'Open Sans', sans-serif;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .header {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .logo {
